# summerrs-admin

./: .dockerignore  .gitignore  .taplo.toml  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  README.zh.md  docker-compose.yml  rustfmt.toml
crates/app/: Cargo.toml
crates/app/benches/: task_queue.rs
crates/app/frontend-routes/api/: auth.ts  config.ts  dict-manage.ts  file-upload.ts  login-log.ts  monitor.ts  operation-log.ts  system-manage.ts  user-profile.ts
crates/app/frontend-routes/api_type/: api.d.ts  auth.d.ts  config.d.ts  file-upload.d.ts  login-log.d.ts  monitor.d.ts  operation-log.d.ts  system.d.ts  user-profile.d.ts
crates/app/src/: main.rs  router.rs
crates/app/src/job/: mod.rs  s3_cleanup.rs  socket_session_gc.rs
crates/app/src/plugin/: background_task.rs  ip2region_plugin.rs  log_batch_collector.rs  mod.rs  pagination.rs  perm_bitmap.rs  sea_orm_plugin.rs  typed_batch.rs
crates/app/src/router/: auth.rs  biz_showcase_profile.rs  login_log.rs  mod.rs  monitor.rs  online.rs  operation_log.rs  sys_config.rs  sys_config_group.rs  sys_dict.rs  sys_file.rs  sys_file_upload.rs  sys_menu.rs  sys_notice.rs  sys_role.rs  sys_user.rs  user_notice.rs  user_profile.rs
crates/app/src/service/: auth_service.rs  biz_showcase_profile_service.rs  login_log_service.rs  mod.rs  monitor_service.rs  online_service.rs  operation_log_service.rs  sys_config_group_service.rs  sys_config_service.rs  sys_dict_service.rs  sys_file_service.rs  sys_file_upload_service.rs  sys_menu_service.rs  sys_notice_service.rs  sys_role_service.rs  sys_user.rs  sys_user_service.rs  user_notice_service.rs
crates/app/src/socketio/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  error.rs  extractor.rs  file_util.rs  lib.rs  request.rs  response.rs  serde_utils.rs  user_agent.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/model/src/dto/: auth.rs  biz_showcase_profile.rs  login_log.rs  mod.rs  operation_log.rs  sys_config.rs  sys_dict.rs  sys_menu.rs  sys_role.rs  sys_user.rs  user_profile.rs
crates/model/src/entity/: biz_role.rs  biz_showcase_profile.rs  biz_user.rs  biz_user_role.rs  customer.rs  mod.rs  sys_config.rs  sys_config_group.rs  sys_dict_data.rs  sys_dict_type.rs  sys_file.rs  sys_login_log.rs  sys_menu.rs  sys_notice.rs  sys_notice_target.rs  sys_notice_user.rs  sys_operation_log.rs  sys_role.rs  sys_role_menu.rs  sys_user.rs  sys_user_role.rs
crates/model/src/vo/: auth.rs  biz_showcase_profile.rs  login_log.rs  mod.rs  monitor.rs  online.rs  operation_log.rs  sys_config.rs  sys_config_group.rs  sys_dict.rs  sys_file.rs  sys_menu.rs  sys_notice.rs  sys_role.rs  sys_user.rs  user_profile.rs
crates/summer-ai/: Cargo.toml  DEVELOPMENT_PLAN.md  FULL_DEVELOPMENT_PLAN.md  ISSUES.md
crates/summer-ai-gateway/: Cargo.toml
crates/summer-ai-gateway/src/: lib.rs  plugin.rs
crates/summer-ai-gateway/src/provider/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/summer-ai-gateway/src/relay/: billing.rs  handler.rs  mod.rs  router.rs  stream.rs
crates/summer-ai-gateway/src/service/: channel.rs  log.rs  mod.rs  model.rs  token.rs
crates/summer-ai-gateway/src/types/: chat.rs  common.rs  mod.rs  model.rs
crates/summer-ai-model/: Cargo.toml
crates/summer-ai/.analysis/: issue-audit.md
crates/summer-ai/admin/: Cargo.toml
crates/summer-ai/admin/src/: lib.rs  plugin.rs
crates/summer-ai/agent/: Cargo.toml
crates/summer-ai/billing/: Cargo.toml
crates/summer-ai/core/: Cargo.toml
crates/summer-ai/docs/: ARCHITECTURE.md  CONVERSION_SPEC.md  DESIGN.md  MIGRATION.md  MIGRATION_V2.md  REFERENCE_COMPARISON.md  ROADMAP.md  anthropic_claude_api.md  openai_api.md
crates/summer-ai/hub/: Cargo.toml
crates/summer-ai/model/: Cargo.toml
crates/summer-ai/relay/: Cargo.toml
crates/summer-ai/src/: lib.rs
crates/summer-auth/: Cargo.toml
crates/summer-auth/src/: bitmap.rs  config.rs  error.rs  extractor.rs  group_layer.rs  jwt_strategy.rs  lib.rs  middleware.rs  online.rs  path_auth.rs  plugin.rs  public_routes.rs  qrcode.rs  strategy.rs  user_type.rs
crates/summer-auth/tests/: integration_test.rs  multi_group_auth_test.rs  public_routes_inventory_test.rs
crates/summer-common/: Cargo.toml
crates/summer-common/src/: error.rs  extractor.rs  file_util.rs  lib.rs  rate_limit.rs  request.rs  user_agent.rs
crates/summer-common/tests/: multipart_read_test.rs
crates/summer-domain/: Cargo.toml
crates/summer-domain/src/: dict.rs  lib.rs  menu.rs  sync.rs
crates/summer-job-dynamic/: Cargo.toml
crates/summer-job-dynamic/src/: context.rs  dto.rs  enums.rs  lib.rs  plugin.rs  registry.rs  scheduler.rs
crates/summer-job-dynamic/tests/: macro_smoke.rs  single_instance_architecture.rs
crates/summer-mcp/: Cargo.toml
crates/summer-mcp/src/: config.rs  error_model.rs  lib.rs  output_contract.rs  plugin.rs  prompts.rs  runtime.rs  server.rs
crates/summer-mcp/tests/: standalone_stdio_real.rs  sys_role_mcp_integration.rs
crates/summer-model/: Cargo.toml
crates/summer-model/src/: lib.rs
crates/summer-plugins/: Cargo.toml
crates/summer-plugins/src/: entity_schema_sync.rs  lib.rs
crates/summer-rig/: Cargo.toml
crates/summer-rig/src/: client.rs  config.rs  error.rs  factory.rs  lib.rs  plugin.rs  provider.rs  registry.rs  service.rs
crates/summer-sharding/: CURRENT_ISSUES.md  Cargo.toml  DESIGN.md  PLUGIN_DESIGN.md  REVIEW.md  REVIEW_ISSUES.md  SQL_REWRITE_MIDDLEWARE_DESIGN.md
crates/summer-sharding/benches/: sea_orm_overhead.rs
crates/summer-sharding/examples/: http_wrk_bench.rs
crates/summer-sharding/src/: error.rs  extensions.rs  lib.rs  plugin.rs
crates/summer-sql-rewrite/: Cargo.toml  README.md  REVIEW_ISSUES.md
crates/summer-sql-rewrite/src/: configurator.rs  connection.rs  context.rs  extensions.rs  helpers.rs  lib.rs  pipeline.rs  plugin.rs  registry.rs  table.rs  transaction.rs
crates/summer-system/: Cargo.toml
crates/summer-system/auth/: Cargo.toml
crates/summer-system/model/: Cargo.toml
crates/summer-system/src/: lib.rs
crates/summer-system/tests/: rate_limit_macro_integration.rs
(+1514 files in other folders)
