[workspace]
members = [
    "crates/app",
    "crates/summer-system-model",
    "crates/summer-ai-model",
    "crates/summer-model",
    "crates/summer-common",
    "crates/summer-admin-macros",
    "crates/summer-rig",
    "crates/summer-sharding",
    "crates/summer-domain",
    "crates/summer-auth",
    "crates/summer-mcp",
    "crates/summer-ai-gateway",
    "crates/summer-system",
    "crates/summer-plugins",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = "0.5"
aws-config = "1.8.14"
aws-credential-types = "1.2.13"
aws-sdk-s3 = "1.124.0"
aws-smithy-types = "1.4.6"
axum-client-ip = "1.3.1"
axum-valid = "0.22.0"
base64 = "0.22.1"
bytes = "1.11.1"
calamine = "0.31.0"
chrono = "0.4.43"
criterion = "0.5"
flume = "0.12"
futures = "0.3.32"
garde = "0.22.1"
ip2region = { git = "https://gitee.com/lionsoul/ip2region.git", branch = "master" }
ipnetwork = "0.20.0"
kanal = "0.1"
lettre = "0.11"
md-5 = "0.10"
mime = "0.3.17"
mime_guess = "2"
parking_lot = "0.12.5"
password-hash = "0.5"
rand = "0.10.0"
regex = "1.12.3"
reqwest = "0.13.2"
rig-core = "0.33.0"
rust_xlsxwriter = "0.91.0"
rustc-hash = "2"
schema = "0.1.0"
schemars = "1.1"
sea-orm = "2.0.0-rc.37"
serde = "1.0.228"
serde_json = "1.0.149"
serde_repr = "0.1"
sqlparser = "0.54.0"
summer = { git = "https://github.com/ouywm/spring-rs.git", rev = "2c4cf6eee7309c8b0c4052c2990565f2c9b0a03e" }
summer-admin-macros = { path = "crates/summer-admin-macros" }
summer-ai-model = { path = "crates/summer-ai-model" }
summer-auth = { path = "crates/summer-auth" }
summer-common = { path = "crates/summer-common" }
summer-domain = { path = "crates/summer-domain" }
summer-job = { git = "https://github.com/ouywm/spring-rs.git", rev = "2c4cf6eee7309c8b0c4052c2990565f2c9b0a03e" }
summer-macros = { git = "https://github.com/ouywm/spring-rs.git", rev = "2c4cf6eee7309c8b0c4052c2990565f2c9b0a03e" }
summer-mail = { git = "https://github.com/ouywm/spring-rs.git", rev = "2c4cf6eee7309c8b0c4052c2990565f2c9b0a03e" }
summer-mcp = { path = "crates/summer-mcp" }
summer-redis = { git = "https://github.com/ouywm/spring-rs.git", rev = "2c4cf6eee7309c8b0c4052c2990565f2c9b0a03e" }
summer-rig = { path = "crates/summer-rig" }
summer-sea-orm = { git = "https://github.com/ouywm/spring-rs.git", rev = "2c4cf6eee7309c8b0c4052c2990565f2c9b0a03e", default-features = false }
summer-sharding = { path = "crates/summer-sharding" }
summer-system-model = { path = "crates/summer-system-model" }
summer-web = { git = "https://github.com/ouywm/spring-rs.git", rev = "2c4cf6eee7309c8b0c4052c2990565f2c9b0a03e" }
sysinfo = "0.35"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-util = "0.7"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.41"
url = "2.5.8"
uuid = "1.21.0"
validator = "0.20.0"
woothee = "0.13"
#ip2region = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
indexmap = "2.13.0"
jsonwebtoken = "9"
reqwest-eventsource = "0.6"
rmcp = "1.2.0"
summer-ai-gateway = { path = "crates/summer-ai-gateway" }
summer-plugins = { path = "crates/summer-plugins" }
summer-system = { path = "crates/summer-system" }
tokio-stream = "0.1"

[patch.crates-io]
sea-orm = { git = "https://github.com/ouywm/sea-orm.git", rev = "1e278de9ad16c5d130cae00598a1d71ff736e48f" }
