[workspace]
members = [
    "crates/app",
    "crates/summer-admin-macros",
    "crates/summer-common",
    "crates/summer-domain",
    "crates/summer-sharding",
    "crates/summer-sql-rewrite",
    "crates/summer-mcp",
    "crates/summer-plugins",
    "crates/summer-system",
    "crates/summer-system/auth",
    "crates/summer-system/model",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = "0.5"
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1.8.14"
aws-credential-types = "1.2.13"
aws-sdk-s3 = "1.124.0"
aws-smithy-types = "1.4.6"
axum-client-ip = "1.3.1"
axum-valid = "0.22.0"
base64 = "0.22.1"
bytes = "1.11.1"
calamine = "0.31.0"
chrono = "0.4.43"
clap = "4"
criterion = "0.5"
flume = "0.12"
futures = "0.3.32"
garde = "0.22.1"
governor = "0.8"
hex = "0.4"
hotpath = "0.14"
http = "1"
indexmap = "2.13.0"
ip2region = { git = "https://gitee.com/lionsoul/ip2region.git", branch = "master" }
#ip2region = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
ipnetwork = "0.20.0"
jsonwebtoken = "9"
kanal = "0.1"
lettre = "0.11"
md-5 = "0.10"
mime = "0.3.17"
mime_guess = "2"
minijinja = "2"
parking_lot = "0.12.5"
password-hash = "0.5"
pgwire-replication = "0.2.0"
proc-macro2 = "1"
quote = "1"
rand = "0.10.0"
regex = "1.12.3"
reqwest = "0.13.2"
reqwest-eventsource = "0.6"
rig-core = "0.33.0"
ring = "0.17.14"
rmcp = "1.2.0"
rust_xlsxwriter = "0.91.0"
rustc-hash = "2"
schema = "0.1.0"
schemars = "1.1"
sea-orm = "2.0.0-rc.37"
serde = "1.0.228"
serde_json = "1.0.149"
serde_repr = "0.1"
sha2 = "0.10"
sqlparser = "0.54.0"
summer = "0.5.0"
summer-admin-macros = { path = "crates/summer-admin-macros" }
summer-auth = { path = "crates/summer-system/auth" }
summer-common = { path = "crates/summer-common" }
summer-domain = { path = "crates/summer-domain" }
summer-job = "0.5.0"
summer-macros = "0.5.0"
summer-mail = "0.5.0"
summer-mcp = { path = "crates/summer-mcp" }
summer-plugins = { path = "crates/summer-plugins" }
summer-redis = "0.5.0"
summer-sea-orm = { version = "0.5.0-rc.1", default-features = false }
summer-sharding = { path = "crates/summer-sharding" }
summer-sql-rewrite = { path = "crates/summer-sql-rewrite" }
summer-system = { path = "crates/summer-system" }
summer-system-model = { path = "crates/summer-system/model" }
summer-web = "0.5.0"
syn = "2"
sysinfo = "0.35"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.5.3"
tower-http = "0.6.8"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3"
url = "2.5.8"
uuid = "1.21.0"
validator = "0.20.0"
woothee = "0.13"

[patch.crates-io]
sea-orm = { path = "/Volumes/990pro/code/rust/sea-orm" }
