[package]
edition = "2024"
name = "app"
version = "0.0.1"

[dependencies]
summer = { workspace = true }
summer-job = { workspace = true }
summer-mail = { workspace = true }
summer-redis = { workspace = true }
summer-sea-orm = { workspace = true, features = [
    "postgres",
    "rustls",
    "with-web",
    "with-web-openapi",
] }
summer-sharding = { workspace = true, features = ["web"] }
summer-sql-rewrite = { workspace = true, features = ["summer-auth"] }
summer-web = { workspace = true, features = [
    "openapi",
    "openapi-swagger",
    "multipart",
    "socket_io",
] }

summer-mcp = { workspace = true }
summer-plugins = { workspace = true }
summer-system = { workspace = true }

axum-client-ip = { workspace = true, features = ["connect-info"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true }
tracing = { workspace = true }

regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
summer-system-model = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
