[package]
name = "common"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
mime = { workspace = true }
rand = { workspace = true }
validator = { workspace = true }
garde = { workspace = true }
