[package]
name = "summer-ai-gateway"
version = "0.0.1"
edition = "2024"

[dependencies]
futures = { workspace = true }
summer-model = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
reqwest-eventsource = "0.6"
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
summer = { workspace = true }
summer-sea-orm = { workspace = true, features = ["postgres", "rustls"] }
summer-web = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
