[package]
edition = "2024"
name    = "summer-ai-gateway"
version = "0.0.1"

[dependencies]
anyhow              = { workspace = true }
bytes               = { workspace = true }
futures             = { workspace = true }
reqwest             = { workspace = true, features = ["json", "stream"] }
reqwest-eventsource = "0.6"
sea-orm             = { workspace = true }
serde               = { workspace = true, features = ["derive"] }
serde_json          = { workspace = true }
summer              = { workspace = true }
summer-ai-model     = { workspace = true }
summer-sea-orm      = { workspace = true, features = ["postgres", "rustls"] }
summer-web          = { workspace = true }
tokio               = { workspace = true }
tokio-stream        = "0.1"
tracing             = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
