[package]
edition = "2024"
name = "summer-ai-model"
version = "0.0.1"

[dependencies]
axum-valid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ipnetwork = { workspace = true, features = ["serde"] }
schemars = { workspace = true, features = ["derive", "chrono04"] }
sea-orm = { workspace = true, features = [
    "with-chrono",
    "with-time",
    "with-json",
    "postgres-vector",
    "postgres-array",
    "debug-print",
    "with-ipnetwork",
    "with-bigdecimal",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr.workspace = true
summer-common = { workspace = true }
validator = { workspace = true, features = ["derive"] }
