[package]
edition = "2024"
name = "summer-ai"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
summer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
