[package]
description = "Authentication and authorization plugin for summer-rs"
edition = "2024"
name = "summer-auth"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
base64 = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
jsonwebtoken = { workspace = true, features = ["aws_lc_rs"] }
matchit = { workspace = true }
parking_lot = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
summer = { workspace = true }
summer-redis = { workspace = true }
summer-web = { workspace = true, features = ["openapi"] }
thiserror = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
