[package]
edition = "2024"
name    = "summer-domain"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
schemars = { workspace = true }
sea-orm = { workspace = true, features = [
    "with-chrono",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { workspace = true, features = ["derive"] }
summer-common = { workspace = true }
summer-system-model = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
