[package]
edition = "2024"
name = "summer-job-dynamic"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
croner = { workspace = true }
futures = { workspace = true }
inventory = { workspace = true }
rand = { workspace = true }
rhai = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
summer = { workspace = true }
summer-admin-macros = { workspace = true }
summer-auth = { workspace = true }
summer-common = { workspace = true }
summer-job = { workspace = true }
summer-sea-orm = { workspace = true, features = [
    "postgres",
    "rustls",
    "with-web",
    "with-web-openapi",
] }
summer-web = { workspace = true, features = ["openapi"] }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
tokio-cron-scheduler = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
