[package]
edition = "2024"
name = "summer-mcp"
version = "0.0.1"

[features]
standalone = [
    "dep:clap",
    "dep:tracing-subscriber",
    "dep:anyhow",
]

[[bin]]
name = "summerrs-mcp"
path = "src/bin/main.rs"
required-features = ["standalone"]

[dependencies]
minijinja = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
summer = { workspace = true }
summer-common = { workspace = true }
summer-domain = { workspace = true }
summer-sea-orm = { workspace = true, features = ["postgres", "rustls"] }
summer-system-model = { workspace = true }
summer-web = { workspace = true }
syn = { workspace = true, features = ["full", "parsing"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

anyhow = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
], optional = true }

[dev-dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
sea-orm = { workspace = true, features = ["mock"] }
