[package]
name = "summer-model"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
summer-common = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
schemars = { workspace = true, features = ["derive", "chrono04"] }
sea-orm = { workspace = true, features = ["with-chrono", "with-time", "with-json", "postgres-vector", "postgres-array", "debug-print", "with-ipnetwork", "with-bigdecimal"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr.workspace = true
validator = { workspace = true, features = ["derive"] }
axum-valid = { workspace = true }
