[package]
edition = "2024"
name    = "summer-plugins"
version = "0.0.1"

[dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-types = { workspace = true }
flume = { workspace = true }
ip2region = { workspace = true }
rustc-hash = { workspace = true }
sea-orm = { workspace = true, features = [
    "with-chrono",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { workspace = true, features = ["derive"] }
summer = { workspace = true }
summer-sea-orm = { workspace = true, features = [
    "postgres",
    "rustls",
    "with-web",
    "with-web-openapi",
] }
summer-system-model = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
bytes   = { workspace = true }
mime    = { workspace = true }
reqwest = { workspace = true }
