[package]
edition = "2024"
name = "summer-rig"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
summer = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
toml = "0.9"
