[package]
edition = "2024"
name = "summer-sharding"
version = "0.0.1"

[features]
default = []
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
web = [
    "summer-auth",
    "summer-sql-rewrite/web",
    "summer-sql-rewrite/summer-auth",
    "summer-web",
    "summer-web/openapi",
    "tower-layer",
    "tower-service",
]
web-probes = ["web"]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hotpath = { workspace = true, optional = true }
parking_lot = { workspace = true }
pgwire-replication = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "mock",
    "proxy",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlparser = { workspace = true }
summer = { workspace = true }
summer-auth = { workspace = true, optional = true }
summer-sql-rewrite = { workspace = true, features = ["summer"] }
summer-web = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tower-layer = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tower = { workspace = true }

[[bench]]
harness = false
name = "sea_orm_overhead"
