[package]
edition = "2024"
name = "summer-sharding"
version = "0.0.1"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
pgwire-replication = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "mock",
    "proxy",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlparser = { workspace = true, features = ["visitor"] }
summer = { workspace = true }
summer-auth = { workspace = true }
summer-web = { workspace = true, features = ["openapi"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tower = { workspace = true }

[[bench]]
harness = false
name = "sea_orm_overhead"
