[package]
edition = "2024"
name = "summer-sql-rewrite"
version = "0.0.1"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "mock",
    "proxy",
] }
sqlparser = { workspace = true, features = ["visitor"] }
summer = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
